Thu Sep 27 13:53:32 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* ChangeLog: Update.

Thu Sep 27 11:16:45 UTC 2007  Paul Rudin <paul@rudin.co.uk>

	* src/cpserver.py: changed references to filter_settings to filters
	  Made a start on consistent error handling by subclassing from a
	  new class that provide methods for dealing with some error
	  situations.

Thu Sep 27 10:19:46 UTC 2007  Paul Rudin <paul@rudin.co.uk>

	* src/cpserver.py: Changed the error response for add.

Thu Sep 27 08:51:22 UTC 2007  Paul Rudin <paul@rudin.co.uk>

	* README: Added some notes about persistence.

Thu Sep 27 08:41:13 UTC 2007  Paul Rudin <paul@rudin.co.uk>

	* src/cpserver.py: Added command line options to load/save data.

Thu Sep 27 08:40:10 UTC 2007  Paul Rudin <paul@rudin.co.uk>

	* src/persist.py: Very simple persistence mechanism user the
	  standard shelve/pickle modules.

Thu Sep 27 08:39:19 UTC 2007  Paul Rudin <paul@rudin.co.uk>

	* src/flax.py: Got rid of the globals (except for options) and
	  moved the intialization of a fresh options object to a function.

Thu Sep 27 08:37:59 UTC 2007  Paul Rudin <paul@rudin.co.uk>

	* src/flax_collections.py: Used the collection update method,
	  rather than updating it's __dict__. Remove the .lower() prior to
	  parsing a query string.

Thu Sep 27 08:35:30 UTC 2007  Paul Rudin <paul@rudin.co.uk>

	* src/filespec.py: Ensured that paths is set to a  list when
	  inititialised as None.

Thu Sep 27 06:02:17 UTC 2007  Paul Rudin <paul@rudin.co.uk>

	* src/cpserver.py: removed unused local in main()

Wed Sep 26 14:08:32 UTC 2007  Tom Mortimer <tom@lemurconsulting.com>

	* src/flax_collections.py: added collection_names property
	* src/cpserver.py: search method now treats col = None as "search all"
	* src/templates.py: template handles col = None

Wed Sep 26 13:19:36 UTC 2007  Paul Rudin <paul@rudin.co.uk>

	* src/indexer.py: In Indexer.stale: used the first mtime field