@@ -1,3 +1,7 @@
+Thu Sep 27 13:56:42 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* utils/log2cl.py: Add script for updating the ChangeLog.
+
 Thu Sep 27 13:53:32 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* ChangeLog: Update.
